# Voice_AI_Agent

livekit-agent-Voice/: .gitignore  agent.py  build_rag.py  knowledge.txt  pyproject.toml  system_prompt.py
livekit-agent-Voice/tools/: agent_tools.py
